# 3D-graphics

./: README.md
OpenGL-Template-master/: CMakeLists.txt
OpenGL-Template-master/libs/assimp-build/: cmake_install.cmake  revision.h
OpenGL-Template-master/libs/assimp-build/code/: cmake_install.cmake
OpenGL-Template-master/libs/assimp-build/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake
OpenGL-Template-master/libs/assimp-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
OpenGL-Template-master/libs/assimp-subbuild/assimp-populate-prefix/src/assimp-populate-stamp/: assimp-populate-gitinfo.txt
OpenGL-Template-master/libs/assimp-subbuild/assimp-populate-prefix/tmp/: assimp-populate-gitclone.cmake  assimp-populate-gitupdate.cmake  assimp-populate-mkdirs.cmake
OpenGL-Template-master/playground/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  playground.cpp  playground.h  uno.fbx
OpenGL-Template-master/playground/gltf-master/: .clang-format
OpenGL-Template-master/playground/reverse-uno-card/: Source.txt
OpenGL-Template-master/playground/uno_reverse_card_4129206(1)/: LICENSE.txt  README.txt
OpenGL-Template-master/playground/uno_reverse_card_4129206(1)/files/: uno_reverse_model1.stl
